--- a/style.css
+++ b/style.css
@@ -19,6 +19,24 @@ body{
 
 }
 
+.PPq1{
+    display: flex;
+    position: fixed;
+    width: 93px;
+    height: 93px;
+    background-color: #B9B9B9;
+    border-radius: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-size: 45px;
+    font-family: 'Kavoon';
+    justify-content: center;
+    align-items: center;
+    &.Q1{
+        background-color: #bc4444;
+    }
+
+}
+
 .AA{
     margin: 20px;
     position: fixed;
@@ -56,6 +74,19 @@ body{
 
 }
 
+.FFq{
+    display: flex;
+    width: 384px;
+    height: 70px;
+    background-color: #B9B9B9;
+    border-radius: 500px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-size: 30px;
+    font-family: 'Kavoon';
+    justify-content: center;
+    align-items: center;
+}
+
 .VV{
     display: flex;
     gap: 18px;
@@ -63,6 +94,8 @@ body{
 
 .DD{
     display: flex;
+    gap: 18px;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 95vh;
@@ -118,8 +151,27 @@ body{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.HRRq1{
+    display: flex;
+    width: 517px;
+    height: 54px;
+    background-color: #B9B9B9;
+    border-radius: 900px;
+    font-size: 30px;
+    font-family: 'Kavoon';
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 .GHH{
     display: flex;
+    gap: 17px;
+}
+
+.GHHq1{
+    display: flex;
+    flex-direction: column;
     gap: 17px;
 }
 
@@ -130,6 +182,16 @@ body{
     right: 50%;
     justify-content: center;
     margin-top: 40px;
+}
+
+.BNNq1{
+    display: flex;
+    position: fixed;
+    left: 50%;
+    right: 50%;
+    justify-content: center;
+    margin-top: 40px;
+    gap: 10px;
 }
 
 .TTRR{
@@ -166,3 +228,23 @@ body{
     height: 100vh;
     gap: 6px;
 }
+
+
+.BOXQQQQ{
+    display: block;
+    position: fixed;
+    transition-duration: 0.4s;
+    z-index: 10;
+    bottom: 0px;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background-color: #383838;
+    &.q1{
+        left: 100%;
+    }
+
+
+
+}
+
