--- a/style.css
+++ b/style.css
@@ -115,6 +115,12 @@ body {
 }
 
 .VV {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    gap: 18px;
+}
+
+.VV1 {
     display: flex;
     gap: 18px;
 }
@@ -181,7 +187,7 @@ body {
 
 .HRRq1 {
     display: flex;
-    width: 517px;
+    width: 253.5px;
     height: 54px;
     background-color: var(--G2);
     border-radius: 900px;
@@ -279,4 +285,10 @@ body {
     top: 50%;
     right: 50%;
     left: 50%;
+}
+
+.QVVTT{
+    display: flex;
+    gap: 0px 10px;
+
 }
